After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677778 - Assorted introspection fixes from Vala
Assorted introspection fixes from Vala
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-06-10 01:03 UTC by Evan Nemerson
Modified: 2012-06-13 02:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
introspection: assorted annotation fixes ported from Vala (6.38 KB, patch)
2012-06-10 01:05 UTC, Evan Nemerson
reviewed Details | Review
introspection: assorted annotation fixes ported from Vala (6.36 KB, patch)
2012-06-12 22:43 UTC, Evan Nemerson
accepted-commit_now Details | Review

Description Evan Nemerson 2012-06-10 01:03:30 UTC
I just finished going through the Vala bindings and moving everything I could to annotations in Clutter.
Comment 1 Evan Nemerson 2012-06-10 01:05:49 UTC
Created attachment 216047 [details] [review]
introspection: assorted annotation fixes ported from Vala
Comment 2 Emmanuele Bassi (:ebassi) 2012-06-10 07:51:54 UTC
Review of attachment 216047 [details] [review]:

looks mostly correct.

::: clutter/clutter-main.c
@@ +1891,3 @@
  *   <literal><replaceable>programname</replaceable> [OPTION...]</literal>
+ * @entries: (array zero-terminated=1) (allow-none): a %NULL
+ *   terminated array of #GOptionEntry<!-- -->s describing the options

this is not correct: the last entry in a GOptionEntry array is usually { NULL, }, which is different than a plain NULL.
Comment 3 Evan Nemerson 2012-06-12 22:43:07 UTC
Created attachment 216239 [details] [review]
introspection: assorted annotation fixes ported from Vala
Comment 4 Emmanuele Bassi (:ebassi) 2012-06-12 23:00:40 UTC
Review of attachment 216239 [details] [review]:

looks okay
Comment 5 Evan Nemerson 2012-06-13 02:50:38 UTC
commit 252eafa5206066062d8f9605fad9367e891c3e45
Author: Evan Nemerson <evan@coeus-group.com>
Date:   Tue Jun 12 15:41:39 2012 -0700

    introspection: assorted annotation fixes ported from Vala
    
    https://bugzilla.gnome.org/show_bug.cgi?id=677778