introspection: assorted annotation fixes ported from Vala

https://bugzilla.gnome.org/show_bug.cgi?id=677778