clutter/clutter-binding-pool.c
@@ -452,7 +452,8 @@ clutter_binding_pool_find (const gchar *name)
  * @action_name: the name of the action
  * @key_val: key symbol
  * @modifiers: bitmask of modifiers
- * @callback: function to be called when the action is activated
+ * @callback: (type Clutter.BindingActionFunc): function to be called
+ *   when the action is activated
  * @data: data to be passed to @callback
  * @notify: function to be called when the action is removed
  *   from the pool
